lib/saluki-metrics/tests/macros/09_missing_prefix.stderr
error: `static_metrics` requires a `prefix = "..."` argument
 --> tests/macros/09_missing_prefix.rs:3:1
  |
3 | #[static_metrics(labels(id))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `static_metrics` (in Nightly builds, run with -Z macro-backtrace for more info)
